# carrot-mcp

./: .gitignore  AGENTS.md  README.md  bump.bat  pyproject.toml
.github/workflows/: release.yml  test.yml
src/carrot_mcp/: __init__.py  __main__.py  backup.py  claude.py  cli.py  mimocode.py  opencode.py
tests/: test_agents.py  test_cli.py
tests/HIL/: .gitignore  IO_MCP_测试报告.md  NFC_MCP_测试报告.md  OFFICE_MCP_测试报告.md  PDF_MCP_测试报告.md  SYS_MCP_测试报告.md  serial_echo.py  tcp_echo.py  udp_echo.py  visual_verify.py
tests/ds/: test_ds.py
tests/io/: test_channel.py  test_logger.py  test_server.py  test_transport.py
tests/nfc/: test_nfc.py
tests/office/: conftest.py  test_backup.py  test_excel.py  test_office.py  test_office_server.py  test_word.py
tests/pdf/: test_cache.py  test_converter.py  test_ocr.py  test_pdf.py  test_pdf_server.py
tests/serial/: test_channel.py  test_logger.py  test_serial.py  test_server.py  test_transport.py
tests/sys/: test_sys_server.py
