[project]
name = "carrot-mcp"
version = "0.0.2"
description = "Carrot MCP - A collection of MCP servers"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "carrot-mcp-pdf",
    "carrot-mcp-serial",
    "carrot-mcp-nfc",
    "carrot-mcp-office",
]

[project.optional-dependencies]
pdf = ["carrot-mcp-pdf"]
serial = ["carrot-mcp-serial"]
nfc = ["carrot-mcp-nfc"]
office = ["carrot-mcp-office"]
all = [
    "carrot-mcp-pdf",
    "carrot-mcp-serial",
    "carrot-mcp-nfc",
    "carrot-mcp-office",
]

[project.scripts]
carrot-mcp = "carrot_mcp.cli:main"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
carrot-mcp-serial = { workspace = true }
carrot-mcp-nfc = { workspace = true }
carrot-mcp-pdf = { workspace = true }
carrot-mcp-office = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/carrot_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
