[project]
name = "carrot-mcp"
version = "0.1.0"
description = "Carrot MCP - A collection of MCP servers"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "carrot-mcp-pdf",
    "carrot-mcp-io",
    "carrot-mcp-nfc",
    "carrot-mcp-office",
    "carrot-mcp-sys",
]

[project.optional-dependencies]
pdf = ["carrot-mcp-pdf"]
io = ["carrot-mcp-io"]
nfc = ["carrot-mcp-nfc"]
office = ["carrot-mcp-office"]
sys = ["carrot-mcp-sys"]
all = [
    "carrot-mcp-pdf",
    "carrot-mcp-io",
    "carrot-mcp-nfc",
    "carrot-mcp-office",
    "carrot-mcp-sys",
]

[project.scripts]
carrot-mcp = "carrot_mcp.cli:main"

[project.entry-points."carrot_mcp.agents"]
claude = "carrot_mcp.claude"
opencode = "carrot_mcp.opencode"
mimocode = "carrot_mcp.mimocode"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
carrot-mcp-io = { workspace = true }
carrot-mcp-nfc = { workspace = true }
carrot-mcp-pdf = { workspace = true }
carrot-mcp-office = { workspace = true }
carrot-mcp-sys = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/carrot_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
